--- a/businessTransfers/src/app/side-bar/side-bar.component.css
+++ b/businessTransfers/src/app/side-bar/side-bar.component.css
@@ -4,6 +4,9 @@ img {
   max-height: 75%;
 }
 
+/*.brand {*/
+  /*text-align: justify;*/
+/*}*/
 @media(max-width: 767px) {
   img {
     max-height: 45%;
