--- a/businessTransfers/src/app/process/process.component.html
+++ b/businessTransfers/src/app/process/process.component.html
@@ -6,8 +6,9 @@
         <div class="content">
           <h1>Our Process</h1>
           <p class="goLeft">
-            We specialize in uncovering businesses that fit our client's acquisition criteria and are not available for sale on the public market.
-            We skillfully and discreetly assist buyers in all phases of the transaction.  Our involvement includes:
+            We specialize in uncovering businesses that fit our client&#39;s acquisition criteria and are not available for
+            sale in the public market. We skillfully and discreetly assist buyers in all phases of the transaction. Our
+            involvement includes:
           </p>
           <ul>
             <li>
