--- a/businessTransfers/src/app/about-us/about-us.component.html
+++ b/businessTransfers/src/app/about-us/about-us.component.html
@@ -6,15 +6,19 @@
         <div class="content">
           <h1>About BTS</h1>
           <p>
-            Business Transfers & Strategies provides services to individuals seeking to buy a small or
-            mid-sized business and to companies seeking to expand through acquisition.  BTS provides
-            the business experience and methodologies buyers
-            need in order to realize their goal of business ownership.
-            We provide an efficient and proven method to confidentially
-            and objectively advise buyers on business search, due diligence, deal structure and financing.
-            Our individual clients are current or former executives making the transition
-            from the corporate world to independent business ownership.  Our corporate clients are mid-sized companies ($5M - $50M annual revenue) seeking to expand capacity, capabilities, or customers.  Our specialty is matching specific client requirements with acquisition targets that are not advertised for sale in the public market.  As a result, our clients have the benefit of exclusive access to these unadvertised sellers.  Our primary focus is manufacturing, construction, distribution and service businesses with up to $50M in annual revenues
-            and that produce an EBITDA of up to $10M.
+            Business Transfers &amp; Strategies provides services to both individuals seeking to buy a small or mid-sized
+            business and to companies, family offices and equity groups seeking to expand through acquisition. BTS
+            provides the experience, methodologies and guidance buyers need in order to realize their goal of
+            business ownership. We provide an efficient and proven method to confidentially and objectively advise
+            buyers on business search, due diligence, deal structure and financing.
+            Our individual clients are typically current or former executives making the transition from the corporate
+            world to independent business ownership. Our corporate clients are mid-sized companies ($5M - $50M
+            annual revenue) seeking to expand capacity, capabilities, or customers, while our family office and
+            equity groups are usually seeking to add to their current portfolio of companies.
+            Our specialty is matching specific client requirements with acquisition targets that are not advertised for
+            sale in the public market. As a result, our clients have the benefit of exclusive access to these
+            unadvertised sellers. Our primary focus is manufacturing, distribution and service businesses with up to
+            $50M in annual revenues and that produce an EBITDA of up to $10M.
           </p>
         </div>
       </div>
