--- a/businessTransfers/src/app/about-us/who-we-serve/who-we-serve.component.html
+++ b/businessTransfers/src/app/about-us/who-we-serve/who-we-serve.component.html
@@ -6,18 +6,20 @@
         <div class="content">
           <h1>Who We Serve</h1>
           <p>
-            Our services are for well-qualified buyers with management
-            experience and sufficient capital to purchase and manage a
-            small or mid-sized business.  Our clients hire us because
-            they do not want to become experts at finding and buying businesses.
-            Our clients seek businesses with "upside potential" where they
-            can apply their skills, experience, and interests to grow an already
-            profitable, healthy business.
+            Our services are for the well-qualified buyer with management experience and sufficient capital to
+            purchase and manage a small or mid-sized business. Our clients hire us because they do not want to
+            become experts at finding and buying businesses. Our clients seek businesses with &quot;upside potential&quot;
+            where they can apply their skills, experience, and interests to grow an already profitable, healthy
+            business.
           </p>
 
+          <h2>
+            Individual Clients
+          </h2>
           <p class="goLeft">
             Our typical individual client's background includes:
           </p>
+
           <ul>
             <li>
               15+ years of corporate management or business ownership experience
@@ -33,6 +35,10 @@
             </li>
           </ul>
 
+
+          <h2>
+            Entity Clients
+          </h2>
           <p class="goLeft">
             Our typical corporate client has the following attributes:
           </p>
@@ -51,9 +57,25 @@
             </li>
           </ul>
 
-          <p>
-            We also assist Search Funds, Family Offices and Private Equity Groups who are seeking acquisition opportunities.
+          <p class="goLeft">
+            Our typical family office and equity group clients have the following attributes:
           </p>
+          <ul>
+            <li>
+              Headquartered in the U.S., seeking companies nationally and internationally
+            </li>
+            <li>
+              Seeking to acquire a company based in North America
+            </li>
+            <li>
+              Looking for companies with $10M - $50M in annual revenue
+            </li>
+            <li>
+              Seeking stand-alone or fold-in opportunities
+            </li>
+          </ul>
+
+
         </div>
       </div>
     </div>
