--- a/businessTransfers/src/app/about-us/why-hire-us/why-hire-us.component.html
+++ b/businessTransfers/src/app/about-us/why-hire-us/why-hire-us.component.html
@@ -6,18 +6,14 @@
         <div class="content">
           <h1>Why Hire Us?</h1>
           <p>
-            Acquiring a business is an important decision - one
-            where you can not afford to make mistakes.  It takes many transactions to know where the pitfalls
-            can occur and how to avoid them.  Our clients do not want to become experts at finding and buying businesses - they want to apply their management
-            skills as soon as possible in a great business.
-            Many times, our clients come to us
-            after looking for a suitable acquisition target for
-            over a year to no avail.  They have wasted significant time and money.
+            Acquiring a business is a crucial process - one where you cannot afford to make mistakes. It takes many
+            transactions to know where the pitfalls can occur and how to avoid them. Our clients do not want to
+            become experts at finding and buying businesses - they want quickly acquire a great business and then
+            apply their management skills.
+            Many times, our clients come to us after looking for a suitable acquisition target for over a year, to no
+            avail. They have wasted considerable time and money.
           </p>
 
-          <p class="goLeft">
-            Our typical individual client's background includes:
-          </p>
           <ul>
             <li>
               Did you know that only 15% of the businesses sold each year advertised their business for sale in the public market?
@@ -28,10 +24,13 @@
           </ul>
 
         <p>
-          We do - its our specialty!  And, we don't just uncover a few acquisition targets - we uncover many.
-It is not uncommon for our clients to look at dozens of companies that meet their acquisition criteria.  Our lead generation system allows our clients to spend the majority of their time screening and analyzing, not searching.  Very often, our client is the only buyer talking to the business seller.
-
-Bottom line - Our clients find more businesses, find them faster and get a better deal with us on their team versus going it alone!
+          We do – it’s our specialty! And, we don&#39;t just uncover a few acquisition targets - we uncover many.
+          It is not uncommon for our clients to look at dozens of companies - companies that meet their exact
+          acquisition criteria. Our lead generation system allows our clients to spend the majority of their time
+          screening and analyzing, not searching. Very often, our client is the only buyer talking to the business
+          seller.
+          Bottom line - Our clients find more businesses, find them faster and get a better deal with us on their
+          team versus going it alone!
         </p>
         </div>
       </div>
