--- a/businessTransfers/src/app/advisors/advisors.component.html
+++ b/businessTransfers/src/app/advisors/advisors.component.html
@@ -52,16 +52,16 @@
                                       includes such companies as Xircom,
                                       Hayes, Digital and CMGI.
                                       Steven's unique blend
-                                      ofexpertiseallows him
+                                      of expertise allows him
                                       to quickly recognize and assess
                                       opportunities, skillfully
                                       construct the acquisition
                                       structure and finalize business
                                       terms, and successfully close
                                       transactions.His careful
-                                      analysisof business
-                                      informationandcollaborative
-                                      styleproduces a win-win for
+                                      analysis of business
+                                      information and collaborative
+                                      style produces a win-win for
                                       both the buyer and the
                                       seller.</p>
                                     <p>Steve can be reached at <a href="mailto:steve.smith@business-transfers.com">steve.smith@business-transfers.com</a></p>
@@ -126,7 +126,7 @@
                                       her corporate
                                       experience,&nbsp;she&nbsp;has
                                       been&nbsp;a successful consultant
-                                      and trainer for nearly 15
+                                      and trainer for nearly 20
                                       years.&nbsp; </p>
                                                     <p>Brehn can be reached at <a href="mailto:brehn.smith@business-transfers.com">brehn.smith@business-transfers.com</a></p>
                                                     <hr></div>
