--- a/businessTransfers/src/app/process/phase1/phase1.component.css
+++ b/businessTransfers/src/app/process/phase1/phase1.component.css
@@ -1,5 +1,5 @@
-html { overflow-y: scroll; }
-body { position: absolute; }
+/*html { overflow-y: scroll; }*/
+/*body { position: absolute; }*/
 
 #topParagraph {
   position: relative;
@@ -11,17 +11,17 @@ body { position: absolute; }
 }
 
 .slide {
-    background-image:url('../../../assets/homeImage.jpg');
-    max-height: 100vh;
-    min-width: 100vw;
-    background-attachment: scroll;
-    background-position: center;
-    background-repeat: repeat;
-    background-size: cover;
-    justify-content: center;
-    position:relative;
-    overflow-y: scroll;
-    padding-bottom: 5%;
+  background-image:url('../../../assets/homeImage.jpg');
+  min-height: 100vh;
+  min-width: 100vw;
+  background-attachment: scroll;
+  background-position: center;
+  background-repeat: repeat;
+  background-size: cover;
+  justify-content: center;
+  position:relative;
+  /*overflow-y: scroll;*/
+  /*padding-bottom: 10%;*/
 }
 
 .blurred-bg-1{
