--- a/businessTransfers/src/app/process/phase2/phase2.component.css
+++ b/businessTransfers/src/app/process/phase2/phase2.component.css
@@ -1,5 +1,5 @@
 html { overflow-y: scroll; }
-body { position: absolute; }
+/*body { position: absolute; }*/
 
 #topParagraph {
   position: relative;
@@ -12,7 +12,7 @@ body { position: absolute; }
 
 .slide {
     background-image:url('../../../assets/homeImage.jpg');
-    max-height: 100vh;
+    min-height: 100vh;
     min-width: 100vw;
     background-attachment: scroll;
     background-position: center;
