--- a/businessTransfers/src/app/process/phase3/phase3.component.css
+++ b/businessTransfers/src/app/process/phase3/phase3.component.css
@@ -12,7 +12,7 @@ body { position: absolute; }
 
 .slide {
     background-image:url('../../../assets/homeImage.jpg');
-    max-height: 100vh;
+    min-height: 100vh;
     min-width: 100vw;
     background-attachment: scroll;
     background-position: center;
