--- a/businessTransfers/src/app/side-bar/side-bar.component.css
+++ b/businessTransfers/src/app/side-bar/side-bar.component.css
@@ -1,12 +1,10 @@
+html {position: fixed;}
 
 img {
   max-width: 75%;
   max-height: 75%;
 }
 
-/*.brand {*/
-  /*text-align: justify;*/
-/*}*/
 @media(max-width: 767px) {
   img {
     max-height: 45%;
