--- a/businessTransfers/src/app/side-bar/side-bar.component.css
+++ b/businessTransfers/src/app/side-bar/side-bar.component.css
@@ -1,5 +1,3 @@
-html {position: fixed;}
-
 img {
   max-width: 75%;
   max-height: 75%;
@@ -14,17 +12,16 @@ img {
 
 
 .nav-side-menu {
-  overflow: auto;
   font-family: verdana;
   font-size: 12px;
   font-weight: 200;
   background-color: #2e353d;
-  position: fixed;
   top: 0px;
   left: 0px;
   width: 260px;
   height: 100%;
   color: #e1ffff;
+  position: fixed;
 }
 .nav-side-menu .brand {
   background-color: #23282e;
@@ -138,7 +135,7 @@ img {
     position: fixed;
     right: 10px;
     top: 10px;
-    /*z-index: 10 !important;*/
+    z-index: 10 !important;
     /*padding: 3px;*/
     background-color: #ffffff;
     color: #000;
