--- a/businessTransfers/src/app/side-bar/side-bar.component.html
+++ b/businessTransfers/src/app/side-bar/side-bar.component.html
@@ -1,4 +1,4 @@
-<div class="col-xs-12 nav-side-menu navbar-static-top">
+<div class="col-xs-12 nav-side-menu navbar">
     <div class="brand">
       <img src="../../assets/logo/logo-white.png" alt="">
     </div>
