--- a/businessTransfers/src/app/side-bar/side-bar.component.css
+++ b/businessTransfers/src/app/side-bar/side-bar.component.css
@@ -8,6 +8,9 @@ img {
     max-height: 45%;
     max-width: 45%;
   }
+  #firstListItem {
+    margin-top:50px;
+  }
 }
 
 
@@ -136,8 +139,8 @@ img {
     right: 10px;
     top: 10px;
     z-index: 10 !important;
-    /*padding: 3px;*/
-    background-color: #ffffff;
+    padding: 3px;
+    background-co lor: #ffffff;
     color: #000;
     width: 40px;
     text-align: center;
@@ -147,6 +150,8 @@ img {
     font-size: 22px;
     padding-left: 20px;
     line-height: 50px !important;
+    position: fixed;
+    background-color: black;
   }
 }
 @media (min-width: 767px) {
