--- a/businessTransfers/src/app/side-bar/side-bar.component.html
+++ b/businessTransfers/src/app/side-bar/side-bar.component.html
@@ -6,7 +6,7 @@
     </i>
     <div class="menu-list">
         <ul id="menu-content" class="menu-content collapse out active">
-            <li  routerLink="/" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
+            <li id="firstListItem" routerLink="/" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
                 <a>
                     <i class="fa fa-home fa-lg"></i> Home
                 </a>
