--- a/businessTransfers/src/app/contactus/contactus.component.html
+++ b/businessTransfers/src/app/contactus/contactus.component.html
@@ -51,7 +51,7 @@
           </table>
           <br>
           <h1>Or contact us using the following form: </h1>
-          <form id="myForm" action="mailto:steve.smith@business-transfers.com" method="post" enctype="text/plain">
+          <form id="myForm" action="mailto:info@business-transfers.com" method="post" enctype="text/plain">
                     <table border="0" align="center">
                       <tbody>
                         <tr>
