--- a/businessTransfers/src/app/advisors/advisors.component.css
+++ b/businessTransfers/src/app/advisors/advisors.component.css
@@ -66,7 +66,8 @@
     overflow: auto;
   }
   .content {
-    overflow: auto;
+    overflow-y: scroll; /* has to be scroll, not auto */
+    -webkit-overflow-scrolling: touch;
   }
   .slide {
     margin-bottom: 50px;
