--- a/businessTransfers/src/app/contactus/contactus.component.css
+++ b/businessTransfers/src/app/contactus/contactus.component.css
@@ -66,7 +66,8 @@ body { position: absolute; }
     margin-left: 5vw;
   }
   .content {
-    overflow: auto;
+    overflow-y: scroll; /* has to be scroll, not auto */
+    -webkit-overflow-scrolling: touch;
   }
   .slide {
     margin-bottom: 50px;
