--- a/businessTransfers/src/app/process/phase2/phase2.component.css
+++ b/businessTransfers/src/app/process/phase2/phase2.component.css
@@ -66,7 +66,8 @@ html { overflow-y: scroll; }
     margin-right: 4vw;
   }
   .content {
-    overflow: auto;
+    overflow-y: scroll; /* has to be scroll, not auto */
+    -webkit-overflow-scrolling: touch;
   }
   .slide {
     margin-bottom: 50px;
