--- a/businessTransfers/src/app/about-us/transactions/transactions.component.html
+++ b/businessTransfers/src/app/about-us/transactions/transactions.component.html
@@ -50,7 +50,129 @@
               <td class="tg-yw4l"></td>
               <td class="tg-yw4l"></td>
             </tr>
-          </table></div>
+            <br>
+            <br>
+          </table>
+            <table border="0" class="table"align="center">
+              <tbody>
+              <tr>
+                <td><u>Manufacturers</u></td>
+                <td></td>
+                <td>
+                </td>
+                <td><u>Distributors</u>
+                  <br>
+                </td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>Architectural
+                  Metalwork </td>
+                <td>$1.5M</td>
+                <td></td>
+                <td>Craftwork Import </td>
+                <td>$6.0M</td>
+              </tr>
+              <tr>
+                <td>Household Wares </td>
+                <td>$3.5M</td>
+                <td></td>
+                <td>Art Licensing/Dist.
+                </td>
+                <td>$6.0M</td>
+              </tr>
+              <tr>
+                <td>Food Products </td>
+                <td>$3.0M</td>
+                <td></td>
+                <td>Industrial Cleaning
+                  Supplies <br>
+                </td>
+                <td>$6.0M<br>
+                </td>
+              </tr>
+              <tr>
+                <td style="vertical-align:
+                    top;">Custom
+                  Woodworking <br>
+                </td>
+                <td style="vertical-align:
+                    top;">$7.5M<br>
+                </td>
+                <td style="vertical-align:
+                    top;"><br>
+                </td>
+                <td style="vertical-align:
+                    top;"><br>
+                </td>
+                <td style="vertical-align:
+                    top;"><br>
+                </td>
+              </tr>
+              <tr>
+                <td>Medical Consumables
+                  <br>
+                </td>
+                <td>$3.0M<br>
+                </td>
+                <td></td>
+                <td><u>Service Companies</u></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>Medical Plastics </td>
+                <td>$6.0M</td>
+                <td></td>
+                <td>Software Company <u></u></td>
+                <td>$1.2M</td>
+              </tr>
+              <tr>
+                <td>Metal Company </td>
+                <td>$2.4M</td>
+                <td></td>
+                <td>Rigging </td>
+                <td>$4.0M</td>
+              </tr>
+              <tr>
+                <td>Sheet Metal </td>
+                <td>$3.5M <br>
+                </td>
+                <td></td>
+                <td>Abatement Company </td>
+                <td>$2.0M</td>
+              </tr>
+              <tr>
+                <td>Medical Implants <br>
+                </td>
+                <td>$13.0M<br>
+                </td>
+                <td></td>
+                <td>Medical Records </td>
+                <td>$9.0M<br>
+                </td>
+              </tr>
+              <tr>
+                <td style="vertical-align:
+                    top;">Biological
+                  Reagents
+                  <br>
+                </td>
+                <td style="vertical-align:
+                    top;">$6.0M<br>
+                </td>
+                <td style="vertical-align:
+                    top;"><br>
+                </td>
+                <td style="vertical-align:
+                    top;"><br>
+                </td>
+                <td style="vertical-align:
+                    top;"><br>
+                </td>
+              </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
       </div>
     </div>
