--- a/businessTransfers/src/app/process/process.component.html
+++ b/businessTransfers/src/app/process/process.component.html
@@ -37,11 +37,11 @@
             These services are delivered using a Three-Phase Process:
           </p>
           <p class="goLeft">
-            <a href="/phase1">1. Preparation and Lead Generation</a>
+            1. Preparation and Lead Generation
             <br>
-            <a href="/phase2">2. Business Selection & Letter of Intent</a>
+            2. Business Selection & Letter of Intent
             <br>
-            <a href="/phase3">3. Business Acquisition</a>
+            3. Business Acquisition
             <br>
           </p>
         </div>
