--- a/businessTransfers/src/app/side-bar/side-bar.component.html
+++ b/businessTransfers/src/app/side-bar/side-bar.component.html
@@ -1,6 +1,6 @@
 <div class="col-xs-12 nav-side-menu navbar">
     <div class="brand">
-      <img src="../../assets/logo/logo-white.png" alt="">
+      <img src="../../assets/logo/logo-gold.png" alt="">
     </div>
     <i  id="bars" class="fa fa-bars fa-2x toggle-btn" data-toggle="collapse" data-target="#menu-content">
     </i>
