--- a/businessTransfers/src/app/advisors/advisors.component.html
+++ b/businessTransfers/src/app/advisors/advisors.component.html
@@ -35,14 +35,13 @@
                                   <div align="left">
                                     <p><strong>Steven Smith,</strong>
                                       BSME, MBA, Principal and
-                                      co-founder of <strong>Business
-                                        Transfers &amp; Strategies (BTS)</strong>,<strong>
+                                      co-founder of <strong>Businesss Transfers &amp; Strategies (BTS)</strong>,<strong>
                                       </strong>has a variety of business
                                       experience, primarily within the
                                       disciplines of marketing,
-                                      sales,product management,
+                                      sales, product management,
                                       finance
-                                      andlegal.Prior
+                                      and legal. Prior
                                       to co-founding BTS, Steven spent
                                       nearly fifteen years in the high
                                       technology sector, where he was
@@ -58,7 +57,7 @@
                                       construct the acquisition
                                       structure and finalize business
                                       terms, and successfully close
-                                      transactions.His careful
+                                      transactions. His careful
                                       analysis of business
                                       information and collaborative
                                       style produces a win-win for
@@ -112,7 +111,7 @@
                                       She&nbsp;applies this
                                       experience&nbsp;in evaluating the
                                       strength of company business and
-                                      operations systems.&nbsp; Using
+                                      operations systems. Using
                                       her Six Sigma Blackbelt skills,
                                       she quickly gathers client
                                       requirements, assesses business
