--- a/businessTransfers/src/app/contactus/contactus.component.html
+++ b/businessTransfers/src/app/contactus/contactus.component.html
@@ -33,6 +33,9 @@
                 <td width="100%">
                   <div align="left">
                     <p>
+                      <strong><span style="font-size: 1.5em"></span>Business Transfers & Strategies, LLC </strong><br>
+                    </p>
+                    <p>
                       <strong>Massachusetts Office:</strong><br>
                       67 South Bedford Street <br>
                       Suite 400W <br>
@@ -55,22 +58,22 @@
                     <table border="0" align="center">
                       <tbody>
                         <tr>
-                          <td>Name:</td>
-                          <td><input type="text" name="Name"></td>
+                          <td style="float: right">Name: &nbsp; </td>
+                          <td><input id="form" type="text" name="Name"></td>
                         <tr>
-                          <td>Address:</td>
-                          <td><input type="text" name="Address"></td>
+                          <td style="float: right">Address: &nbsp; </td>
+                          <td><input id="form" type="text" name="Address"></td>
                         </tr>
                         <tr>
-                          <td>Phone Number:</td>
-                          <td><input type="number" name="Phone Number"></td>
+                          <td style="float: right">Phone Number: &nbsp; </td>
+                          <td><input id="form" type="number" name="Phone Number"></td>
                         </tr>
                         <tr>
-                          <td>E-mail:</td>
-                          <td><input type="email" name="E-mail"></td>
+                          <td style="float: right">E-mail: &nbsp; </td>
+                          <td><input id="form" type="email" name="E-mail"></td>
                         </tr>
                         <tr>
-                          <td>Information Requested:</td>
+                          <td style="float: right">Information Requested: &nbsp; </td>
                           <td><textarea name="Information Requested" cols="22" form="myForm"></textarea></td>
                         </tr>
                       </tbody>
