--- a/businessTransfers/src/app/in-the-news/in-the-news.component.html
+++ b/businessTransfers/src/app/in-the-news/in-the-news.component.html
@@ -10,7 +10,7 @@
             issue of M&A Today, a national newsletter for the Mergers & Acquisitions industry.
             Click the icon below to read the article.
           </p>
-            <a href="http://www.business-transfers.com/images/MA_BTrans_4web.pdf">
+            <a href="../../assets/MA_article.pdf">
               <i class="fa fa-file-text fa-3x" aria-hidden="true"></i>
             </a>
         </div>
