--- a/businessTransfers/src/app/about-us/btsoverview/btsoverview.component.css
+++ b/businessTransfers/src/app/about-us/btsoverview/btsoverview.component.css
@@ -20,7 +20,7 @@
 }
 
 .blurred-bg-1{
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.3));
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.8));
   background-repeat:no-repeat;
 	/*@include background-size(cover);*/
 	background-attachment: fixed;
@@ -68,6 +68,7 @@
   .slide {
     margin-bottom: 22%;
     overflow: auto;
+    min-height: 100vh;
   }
 }
 
