--- a/businessTransfers/src/app/about-us/who-we-serve/who-we-serve.component.css
+++ b/businessTransfers/src/app/about-us/who-we-serve/who-we-serve.component.css
@@ -1,7 +1,10 @@
+html { overflow-y: scroll; }
+body { position: absolute; }
+
 #topParagraph {
   position: relative;
   float: left;
-  padding-top:5vh;
+  padding-top:2.5vh;
   margin-top: auto;
   display: block;
 }
@@ -20,11 +23,13 @@
   padding-bottom: 5%;
 }
 
+
 .blurred-bg-1{
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.6));
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.8));
   background-repeat:no-repeat;
 	@include background-size(cover);
 	background-attachment: fixed;
+
 }
 
 .box{
@@ -50,6 +55,9 @@
 
   .content{
     margin: auto;
+    overflow: auto;
+    overflow-y: scroll; /* has to be scroll, not auto */
+    -webkit-overflow-scrolling: touch;
   }
 }
 
@@ -71,6 +79,7 @@
   .slide {
     padding-bottom: 5%;
     overflow: auto;
+    min-height: 100vh;
   }
 }
 
