--- a/businessTransfers/src/app/about-us/why-hire-us/why-hire-us.component.css
+++ b/businessTransfers/src/app/about-us/why-hire-us/why-hire-us.component.css
@@ -20,7 +20,7 @@
 }
 
 .blurred-bg-1{
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.6));
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.8));
   background-repeat:no-repeat;
 	@include background-size(cover);
 	background-attachment: fixed;
@@ -71,6 +71,7 @@
   .slide {
     padding-bottom: 5%;
     overflow: auto;
+    min-height: 100vh;
   }
 }
 
