--- a/businessTransfers/src/app/contactus/contactus.component.css
+++ b/businessTransfers/src/app/contactus/contactus.component.css
@@ -25,7 +25,7 @@ body { position: absolute; }
 }
 
 .blurred-bg-1{
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.6));
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.8));
   background-repeat:repeat;
 	@include background-size(cover);
 	background-attachment: scroll;
@@ -72,7 +72,7 @@ body { position: absolute; }
   .slide {
     margin-bottom: 50px;
     overflow: auto;
-    max-height: 100vh;
+    min-height: 100vh;
   }
 }
 
@@ -133,10 +133,24 @@ p, a, td{
 .content > h1 {
   color : #9E8145;
 }
-input, textarea {
+#form, textarea{
   color : black;
+  width: 200px;
+  height: 30px;
+}
+textarea {
+  height: 60px;
 }
 .btn {
   background-color: #9E8145;
   font-size: 17px;
+}
+h2 {
+  font-size: 1em;
+  font-weight: 500;
+}
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
