--- a/businessTransfers/src/app/process/process.component.css
+++ b/businessTransfers/src/app/process/process.component.css
@@ -1,3 +1,6 @@
+html { overflow-y: scroll; }
+body { position: absolute; }
+
 #topParagraph {
   position: relative;
   float: left;
@@ -69,6 +72,7 @@
   .slide {
     margin-bottom: 22%;
     overflow: auto;
+    min-height: 100vh;
   }
 }
 
