--- a/businessTransfers/src/app/resources/resources.component.css
+++ b/businessTransfers/src/app/resources/resources.component.css
@@ -20,7 +20,7 @@
 }
 
 .blurred-bg-1{
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.7));
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.8));
   background-repeat:no-repeat;
 	@include background-size(cover);
 	background-attachment: fixed;
@@ -69,6 +69,7 @@
   .slide {
     margin-bottom: 22%;
     overflow: auto;
+    min-height: 100vh;
   }
 }
 
