--- a/businessTransfers/src/app/side-bar/side-bar.component.html
+++ b/businessTransfers/src/app/side-bar/side-bar.component.html
@@ -6,26 +6,26 @@
     </i>
     <div class="menu-list">
         <ul id="menu-content" class="menu-content collapse out active" (click)="collapseMe()">
-            <li id="firstListItem" routerLink="/" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
+            <li id="firstListItem" routerLink="" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
                 <a>
                     <i class="fa fa-home fa-lg"></i> Home
                 </a>
             </li>
             <li
-                 routerLink="/about-us" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}" class="collapsed">
+                 routerLink="about-us" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}" class="collapsed out">
                 <a>
                   <i class="fa fa-info-circle fa-lg"></i> About Us<i class="fa fa-chevron-down"></i>
                 </a>
             </li>
             <ul class="sub-menu" id="about">
                 <li
-                     routerLink="/btsoverview" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a>BTS Overview</a></li>
+                     routerLink="btsoverview" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a>BTS Overview</a></li>
                 <li
-                     routerLink="/who-we-serve" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a>Who We Serve</a></li>
+                     routerLink="who-we-serve" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a>Who We Serve</a></li>
                 <li
-                     routerLink="/transactions" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a>Transaction Experience</a></li>
+                     routerLink="transactions" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a>Transaction Experience</a></li>
                 <li
-                     routerLink="/why-hire-us" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a>Why Hire Us</a></li>
+                     routerLink="why-hire-us" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a>Why Hire Us</a></li>
             </ul>
 
             <li
@@ -36,7 +36,7 @@
             </li>
 
             <li
-                 routerLink="/process" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}" class="collapsed">
+                 routerLink="process" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}" class="collapsed">
                 <a>
                   <i class="fa fa-bar-chart fa-lg"></i> Our Process<i class="fa fa-chevron-down"></i>
                 </a>
@@ -50,25 +50,25 @@
                      routerLink="phase3" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a>Phase 3 - Business Acquisition</a></li>
             </ul>
             <li
-                 routerLink="/testimonials" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
+                 routerLink="testimonials" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
                 <a>
                     <i class="fa fa-comments-o fa-lg"></i> Testimonials
                 </a>
             </li>
             <li
-                 routerLink="/news" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
+                 routerLink="news" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
                 <a>
                     <i class="fa fa-newspaper-o fa-lg"></i> In The News
                 </a>
             </li>
             <li
-                 routerLink="/resources" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
+                 routerLink="resources" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
                 <a>
                     <i class="fa fa-tint fa-lg"></i> Resources
                 </a>
             </li>
             <li
-                 routerLink="/contactus" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
+                 routerLink="contactus" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
                 <a>
                     <i class="fa fa-phone fa-lg"></i> Contact Us
                 </a>
