--- a/businessTransfers/src/app/about-us/transactions/transactions.component.html
+++ b/businessTransfers/src/app/about-us/transactions/transactions.component.html
@@ -53,6 +53,11 @@
             <br>
             <br>
           </table>
+
+            <p style="text-align: center">
+              <h4>The following is a sample of companies (with annual revenues) uncovered for our clients:</h4>
+            <p>
+
             <table border="0" class="table"align="center">
               <tbody>
               <tr>
