--- a/businessTransfers/src/app/about-us/why-hire-us/why-hire-us.component.html
+++ b/businessTransfers/src/app/about-us/why-hire-us/why-hire-us.component.html
@@ -29,9 +29,11 @@
           acquisition criteria. Our lead generation system allows our clients to spend the majority of their time
           screening and analyzing, not searching. Very often, our client is the only buyer talking to the business
           seller.
-          Bottom line - Our clients find more businesses, find them faster and get a better deal with us on their
-          team versus going it alone!
         </p>
+          <h3>
+            Our clients find more businesses, find them faster, and get a better deal
+            with us on their team versus going it alone
+          </h3>
         </div>
       </div>
     </div>
