--- a/businessTransfers/src/app/resources/resources.component.html
+++ b/businessTransfers/src/app/resources/resources.component.html
@@ -8,10 +8,10 @@
           <h3>Printed Material</h3>
           <ul>
             <li>
-              Buying Your Own Business by Russell Robb provides a useful overview of the buying process, and insight into how to create and utilize your acquisition team.
+              <strong><i>Buying Your Own Business by Russell Robb</i></strong> provides a useful overview of the buying process, and insight into how to create and utilize your acquisition team.
             </li>
             <li>
-              You Can Negotiate Anything by Herb Cohen provides a simple framework for negotiating.  He provides many practical examples and techniques that are useful in the business acquisition process - whether it's negotiating with the business owner or the bank.
+              <strong><i>You Can Negotiate Anything by Herb Cohen</i></strong> provides a simple framework for negotiating.  He provides many practical examples and techniques that are useful in the business acquisition process - whether it's negotiating with the business owner or the bank.
             </li>
           </ul>
         </div>
