--- a/businessTransfers/src/app/about-us/why-hire-us/why-hire-us.component.css
+++ b/businessTransfers/src/app/about-us/why-hire-us/why-hire-us.component.css
@@ -112,9 +112,14 @@ h1 {
   color : white;
   font-weight: 300;
 }
+h3 {
+  color : #9E8145;
+  font-size: 2em;
+}
 p{
   font-size: 17px;
   font-weight: 200;
+  text-align: justify;
 }
 .content > h1 {
   color : #9E8145;
