--- a/businessTransfers/src/app/contactus/contactus.component.css
+++ b/businessTransfers/src/app/contactus/contactus.component.css
@@ -127,6 +127,7 @@ h1 {
   font-weight: 300;
 }
 p, a, td{
+  text-align: justify;
   font-size: 17px;
   font-weight: 200;
 }
@@ -153,4 +154,8 @@ input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance:textfield;
 }
