--- a/businessTransfers/src/app/side-bar/side-bar.component.html
+++ b/businessTransfers/src/app/side-bar/side-bar.component.html
@@ -12,63 +12,61 @@
                 </a>
             </li>
             <li  data-toggle="collapse" href="#about"
-                 routerLink="about-us" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}" class="collapsed out">
+                 routerLink="/about-us" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}" class="collapsed out">
               <a>
                   <i class="fa fa-info-circle fa-lg"></i> About Us<i class="fa fa-chevron-down"></i>
               </a>
             </li>
             <ul class="sub-menu panel-collapse collapse" id="about">
                 <li
-                     routerLink="btsoverview" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a>BTS Overview</a></li>
+                     routerLink="/who-we-serve" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a>Who We Serve</a></li>
                 <li
-                     routerLink="who-we-serve" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a>Who We Serve</a></li>
+                     routerLink="/transactions" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a>Transaction Experience</a></li>
                 <li
-                     routerLink="transactions" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a>Transaction Experience</a></li>
-                <li
-                     routerLink="why-hire-us" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a>Why Hire Us</a></li>
+                     routerLink="/why-hire-us" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a>Why Hire Us</a></li>
             </ul>
 
             <li
-                 routerLink="advisors" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
+                 routerLink="/advisors" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
                 <a>
                     <i class="fa fa-users fa-lg"></i> Our Advisors
                 </a>
             </li>
 
             <li  data-toggle="collapse" href="#process"
-                 routerLink="process" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}" class="collapsed">
+                 routerLink="/process" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}" class="collapsed">
                 <a>
                   <i class="fa fa-bar-chart fa-lg"></i> Our Process<i class="fa fa-chevron-down"></i>
                 </a>
             </li>
             <ul class="sub-menu panel-collapse collapse" id="process">
                 <li
-                     routerLink="phase1" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a>Phase 1 - Preparation</a></li>
+                     routerLink="/phase1" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a>Phase 1 - Preparation</a></li>
                 <li
-                     routerLink="phase2" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a>Phase 2 - Business Selection</a></li>
+                     routerLink="/phase2" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a>Phase 2 - Business Selection</a></li>
                 <li
-                     routerLink="phase3" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a>Phase 3 - Business Acquisition</a></li>
+                     routerLink="/phase3" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a>Phase 3 - Business Acquisition</a></li>
             </ul>
             <li
-                 routerLink="testimonials" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
+                 routerLink="/testimonials" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
                 <a>
                     <i class="fa fa-comments-o fa-lg"></i> Testimonials
                 </a>
             </li>
             <li
-                 routerLink="news" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
+                 routerLink="/news" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
                 <a>
                     <i class="fa fa-newspaper-o fa-lg"></i> In The News
                 </a>
             </li>
             <li
-                 routerLink="resources" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
+                 routerLink="/resources" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
                 <a>
                     <i class="fa fa-tint fa-lg"></i> Resources
                 </a>
             </li>
             <li
-                 routerLink="contactus" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
+                 routerLink="/contact-us" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
                 <a>
                     <i class="fa fa-phone fa-lg"></i> Contact Us
                 </a>
