--- a/businessTransfers/src/app/contactus/contactus.component.html
+++ b/businessTransfers/src/app/contactus/contactus.component.html
@@ -4,7 +4,7 @@
     <div class="col-md-9 col-xs-12" id="topParagraph">
       <div id="box1" class="box blurred-bg-1 tinted">
         <div class="content">
-          <h1>BTS has two offices to serve you:</h1>
+          <!--<h1>BTS has two offices to serve you:</h1>-->
           <table width="100%" cellspacing="0" cellpadding="5" border="0">
             <tbody>
               <tr>
@@ -33,19 +33,14 @@
                 <td width="100%">
                   <div align="left">
                     <p>
-                      <strong><span style="font-size: 1.5em"></span>Business Transfers & Strategies, LLC </strong><br>
-                    </p>
-                    <p>
-                      <strong>Massachusetts Office:</strong><br>
-                      67 South Bedford Street <br>
-                      Suite 400W <br>
-                      Burlington, MA  01803 <br>
-                      (781) 229-5857
+                      <strong><span style="font-size: 1em"></span>Business Transfers & Strategies, LLC </strong>
                     </p>
                     <p>
                       <strong>New Hampshire Office:</strong> <br>
-                      Windham, NH  03087 <br>
-                      (603) 425-0110 <br>
+                      15 Constitution Drive<br>
+                      Suite 1A<br>
+                      Bedford, NH  03110 <br>
+                      (603) 310-5034
                     </p>
                   </div>
                 </td>
