--- a/businessTransfers/src/app/about-us/who-we-serve/who-we-serve.component.css
+++ b/businessTransfers/src/app/about-us/who-we-serve/who-we-serve.component.css
@@ -11,7 +11,7 @@ body { position: absolute; }
 
 .slide {
   background-image:url('../../../assets/homeImage.jpg');
-  max-height: 100vh;
+  min-height: 100vh;
   min-width: 100vw;
   background-attachment: scroll;
   background-position: center;
