--- a/businessTransfers/src/app/side-bar/side-bar.component.css
+++ b/businessTransfers/src/app/side-bar/side-bar.component.css
@@ -21,7 +21,7 @@ img {
   background-color: #2e353d;
   top: 0px;
   left: 0px;
-  width: 260px;
+  width: 17vw;
   height: 100%;
   color: #e1ffff;
   position: fixed;
@@ -140,7 +140,7 @@ img {
     top: 10px;
     z-index: 10 !important;
     padding: 3px;
-    background-co lor: #ffffff;
+    background-color: #ffffff;
     color: #000;
     width: 40px;
     text-align: center;
