--- a/businessTransfers/src/app/contactus/contactus.component.html
+++ b/businessTransfers/src/app/contactus/contactus.component.html
@@ -36,11 +36,11 @@
                       <strong><span style="font-size: 1em"></span>Business Transfers & Strategies, LLC </strong>
                     </p>
                     <p>
-                      <strong>New Hampshire Office:</strong> <br>
-                      15 Constitution Drive<br>
+                      <strong>Address:</strong> <br>
+                      71 Blossom Road, Windham<br>
                       Suite 1A<br>
-                      Bedford, NH  03110 <br>
-                      (603) 310-5034
+                      NH 03087<br>
+                      (603) 425-0110
                     </p>
                   </div>
                 </td>
